fix triangle z-index

--- a/src/styles/brackets_variables.less
+++ b/src/styles/brackets_variables.less
@@ -43,8 +43,8 @@
 @z-index-cm-max: @z-index-cm-dialog;
 
 @z-index-brackets-ui: @z-index-cm-max + 1;
-@z-index-brackets-selection-triangle: @z-index-brackets-ui;
 @z-index-brackets-results-panel: @z-index-brackets-ui;
+@z-index-brackets-selection-triangle: @z-index-brackets-ui + 1;
 @z-index-brackets-scroller-shadow: @z-index-brackets-selection-triangle + 1;
 @z-index-brackets-inline-editor-shadow: @z-index-brackets-ui;
 @z-index-brackets-toolbar: @z-index-brackets-scroller-shadow + 1;
